# freelancia

./: .env  .gitignore  Anchor.toml  Cargo.toml  README.md  package-lock.json  package.json  test-journal  test.db  tsconfig.json
.sqlx/: query-31c12ed147cdc848dcc2447ed5c702c82bc795695193b4247a7fc0a9678a6432.json  query-8d9e1d4d99fd20ffeb90a82d9a86ef56d6733054cb4d3519148a5ec65fd64f95.json  query-cb3937268f451c18c2dbb2d468f844921ce442ca432798ae93acb79df551d024.json  query-e41594041a43e7d0eae2c4003b40da4353698365164ab6c73c5258b3e1f05fab.json
docs/: smart-contract-outline.md
migrations/: 20250516155455_create_tables.sql  20250717153940_create_tables.sql
programs/escrow/: Anchor.toml  Cargo.toml  package-lock.json  package.json
programs/escrow/programs/escrow/: Cargo.toml
programs/escrow/programs/escrow/src/: lib.rs  utils.rs
programs/escrow/src/: error.rs  lib.rs
programs/escrow/tests/: CancelBeforeStart.ts  approveEscrow.ts  arbiterResolve.ts  claimTimeout.ts  escrow.ts  escrowCreateAndSubmit.ts  raiseDispute.ts  requestReview.ts
src/: error.rs  lib.rs  main.rs  utils.rs
src/blockchain/: escrow.rs
src/config/: mod.rs
src/db/: mod.rs
src/handlers/: auth.rs  auth_middleware.rs  client.rs  escrow.rs  freelancer.rs  job.rs  mod.rs  profile.rs  proposal.rs
src/middleware/: auth.rs
src/models/: auth.rs  bid.rs  client.rs  escrow.rs  freelancer.rs  job.rs  jwt.rs  mod.rs  profile.rs  proposal.rs  user.rs
src/routes/: blockchain.rs  client.rs  common.rs  freelancer.rs  mod.rs
test-ledger/: faucet-keypair.json  genesis.tar.bz2  stake-account-keypair.json  validator-keypair.json  vote-account-keypair.json
test-ledger/rocksdb/: 000014.sst  000015.sst  000016.sst  000017.sst  000018.sst  000019.sst  IDENTITY  LOG  LOG.old.1752080957873464  MANIFEST-000021  OPTIONS-000027  OPTIONS-000029
tests/: auth.rs  escrow.js  wallet_utils.rs
tests-integration/blockchain/: escrow.rs
