[package]
name = "freelancia_backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["tokio"]}
tokio = { version = "1", features = ["full"]}
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
tower = { version ="0.4", features = ["util"]}
dotenvy = "0.15"
sqlx = { version = "0.7", features= ["sqlite", "runtime-tokio-rustls", "uuid", "macros"]}
jsonwebtoken = "9.3.1"
chrono = { version = "0.4", features = ["serde"] }
validator = { version = "0.18", features = ["derive"]}
bcrypt = "0.15.1"
tower-http = { version = "0.6.0", features = ["cors"] }
ethers = { version = "2.0.11", features = ["rustls"], default-features = false}
rand = "0.8.5"
hex = "0.4.3"


[dev-dependencies]

tower-http = { version = "0.5", features = ["fs"] }