[package]
name = "freelancia_backend"
version = "0.1.0"
edition = "2021"

[workspace]
members = [          
    "programs/escrow/programs/escrow"  # Anchor program
]

[dependencies]
#escrow = { path = "/home/timus/Desktop/rust_programming/blockchain/freelancia_backend/programs/escrow" } # path to anchor program
axum = { version = "0.7", features = ["tokio"]}
tokio = { version = "1", features = ["full"]}
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
tower = { version ="0.4", features = ["util"]}
dotenvy = "0.15"
sqlx = { version = "0.7", features= ["sqlite", "runtime-tokio-rustls", "uuid", "macros"]}
jsonwebtoken = "9.3.1"
chrono = { version = "0.4", features = ["serde"] }
validator = { version = "0.18", features = ["derive"]}
bcrypt = "0.15.1"
tower-http = { version = "0.6.0", features = ["cors"] }
ethers = { version = "2.0.11", features = ["rustls"], default-features = false}
rand = "0.8.5"
hex = "0.4.3"
anchor-client = "0.31.1"
solana-sdk = "2.2.2"
anchor-lang = { version = "0.31.1", features = ["derive"] }        # Core Anchor framework
anchor-spl = "0.31.1"         # For token operations (future use)
solana-program = "2.2.1"    # Solana base library
thiserror = "1.0"             # Error handling
http = "1.3.1"


[dev-dependencies]
solana-program-test = "2.2.7"
anchor-client = "0.31.1"



[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []


[profile.release]
overflow-checks = true
